--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Nils Hartmann",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.6.1",
     "color": "^0.11.1",
     "events": "^1.1.0",
     "fs": "0.0.2",
